Fri Apr  4 11:17:44 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_android.GNU:
          Make linking the shared STL library dependent on static_libs_only.

Fri Apr  4 08:38:05 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_Android.pm:
          Refactoring to improve functionality and stability of running
          tests on Android Virtual Device (AVD).

        * bin/PerlACE/Process_Unix.pm:
          Small correction in remote PID retrieval.


Thu Mar 27 09:34:54 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/TestTarget_Android.pm:
          Added support for copying system libraries to emulator target.

Mon Mar 24 10:27:40 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/TestTarget.pm:
          Improve remote (-shell) testing support.

        * include/makeinclude/platform_android.GNU:
          Add required standard libraries for rtti, exceptions and (shared)
          stl support on Android.

Sun Mar 23 22:55:42 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ACE+TAO+CIAO+DAnCE.json:
          Exclude some OpenDDS logging macros from the test
          coverage

Fri Mar 21 19:58:03 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Map_Manager_Test.cpp:
          Fix windows warnings

Mon Mar 17 10:41:37 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Map_Manager_Test.cpp:
          Fixed possible divide by zero reported by Coverity

Mon Mar 17 10:20:30 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Manual_Event_Test.cpp:
          Fixed data race

Mon Mar 17 10:12:44 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.h:
        * ace/Log_Msg.inl:
        * ace/Log_Msg.cpp: